--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" 
-        content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" 
-        content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>devmentor.pl - webpack</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Test</h1>
+    <h2>Another test</h2>
+    <h3>Last test</h3>
+  </body>
 </html>
