Portfolio first step

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,14 @@
     <title>devmentor.pl - webpack</title>
   </head>
   <body>
-    <h1>Test heading</h1>
+    <h1>Github Profile</h1>
+    <div id="profile">
+      <img id="avatar" src="" alt="Profile Picture" />
+      <h2 id="username"></h2>
+    </div>
+    <h2>Popular Repositories</h2>
+    <ul id="repositories">
+      <!-- Repositories will be populated here -->
+    </ul>
   </body>
 </html>
